<resources>
    <string name="app_name">Трекер задач</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_planner">Контроль задач</string>
    <string name="active">Активные</string>
    <string name="completed">Завершенные</string>
    <string name="add_task">Добавить задачу</string>
    <string name="create_new_task">Создать новую задачу</string>
    <string name="importance">Важность</string>
    <string name="low">Низкая</string>
    <string name="average">Средняя</string>
    <string name="high">Высокая</string>
    <string name="select_date">Выбрать дату</string>
    <string name="start">Старт</string>
    <string name="completion">Завершение</string>
    <string name="description">Описание</string>
    <string name="title">Название</string>
    <string name="separator">/</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="change_task">Изменить задачу</string>
    <string name="save_task">Сохранить изменения</string>
    <string name="create_task">Задача создана</string>
</resources>