<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragments.main.MainTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/left_repo"
            app:title="@string/create_new_task" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_importance"
        style="@style/style_create_new_task_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/importance"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <LinearLayout
        android:id="@+id/container_for_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_importance">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/low"
            android:textAppearance="@style/style_text_button_importance" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/orange"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/average"
            android:textAppearance="@style/style_text_button_importance" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/red"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/high"
            android:textAppearance="@style/style_text_button_importance" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_select_date"
        style="@style/style_create_new_task_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_date"
        app:layout_constraintTop_toBottomOf="@id/container_for_button" />

    <com.example.tasktracker2.fragments.CustomDateView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_select_date" />

    <com.example.tasktracker2.fragments.CustomDateView
        android:id="@+id/completion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/completion">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/style_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@null">

            <EditText
                android:id="@+id/task_title"
                style="@style/style_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/card_title">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/style_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@null">

            <EditText
                android:id="@+id/task_description"
                style="@style/style_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_new"
        style="@style/style_button_add_new"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:text="@string/add_task"
        app:backgroundTint="@color/yellow"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>