<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_importance"
        style="@style/style_create_new_task_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:text="@string/importance"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_for_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_bottom_for_card_item"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_importance">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_button_low"
            android:backgroundTint="@color/green"
            android:minWidth="@dimen/min_width_end_button_low"
            android:minHeight="@dimen/min_width_end_button_low"
            android:paddingHorizontal="@dimen/margin_top"
            android:paddingVertical="@dimen/margin_end_button_low"
            android:text="@string/low"
            android:textAppearance="@style/style_text_button_importance" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/orange"
            android:minWidth="@dimen/min_width_end_button_low"
            android:minHeight="@dimen/min_width_end_button_low"
            android:paddingHorizontal="@dimen/margin_top"
            android:paddingVertical="@dimen/margin_end_button_low"
            android:text="@string/average"
            android:textAppearance="@style/style_text_button_importance" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_button_low"
            android:backgroundTint="@color/red"
            android:minWidth="@dimen/min_width_end_button_low"
            android:minHeight="@dimen/min_width_end_button_low"
            android:paddingHorizontal="@dimen/margin_top"
            android:paddingVertical="@dimen/margin_end_button_low"
            android:text="@string/high"
            android:textAppearance="@style/style_text_button_importance" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_select_date"
        style="@style/style_create_new_task_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_title_card"
        android:layout_marginTop="@dimen/margin_start_title_card"
        android:text="@string/select_date"
        app:layout_constraintTop_toBottomOf="@id/container_for_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_title_card"
        android:layout_marginTop="@dimen/margin_start_items_in_card_deadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_select_date">


        <ImageView
            android:id="@+id/icon_calendar_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@id/container_for_text_deadline_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/container_for_text_deadline_start" />

        <LinearLayout
            android:id="@+id/container_for_text_deadline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_items_in_card_deadline"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/icon_calendar_start"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_title_start"
                android:text="@string/start"
                android:textAppearance="@style/style_text_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/style_text_start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:text="@string/separator"
                    android:textAppearance="@style/style_text_start" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/style_text_start" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/completion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_title_card"
        android:layout_marginTop="@dimen/margin_bottom_for_card_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start">

        <ImageView
            android:id="@+id/icon_calendar_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@id/container_for_text_deadline_completion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/container_for_text_deadline_completion" />

        <LinearLayout
            android:id="@+id/container_for_text_deadline_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_bottom_for_card_item"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/icon_calendar_completion"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_completion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_title_start"
                android:text="@string/completion"
                android:textAppearance="@style/style_text_start" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/complete_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/style_text_start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_separator"
                    android:text="@string/separator"
                    android:textAppearance="@style/style_text_start" />

                <TextView
                    android:id="@+id/complete_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/style_text_start" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_card_title"
        android:layout_marginHorizontal="@dimen/margin_start_title_card"
        android:layout_marginTop="@dimen/margin_start_title_card"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/corner_radius_card_item"
        app:layout_constraintTop_toBottomOf="@id/completion">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/style_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="@dimen/min_width_end_button_low"
            app:boxStrokeWidthFocused="@dimen/min_width_end_button_low"
            app:hintTextColor="@null">

            <EditText
                android:id="@+id/task_title"
                style="@style/style_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/description_height"
        android:layout_marginHorizontal="@dimen/margin_end_button_menu"
        android:layout_marginTop="@dimen/margin_bottom_for_card_item"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/corner_radius_card_item"
        app:layout_constraintTop_toBottomOf="@id/card_title">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/style_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@null"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="@dimen/min_width_end_button_low"
            app:boxStrokeWidthFocused="@dimen/min_width_end_button_low"
            app:hintTextColor="@null">

            <EditText
                android:id="@+id/task_description"
                style="@style/style_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>