<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_bottom_for_card_item"
        android:layout_marginTop="@dimen/margin_top_app_bar_layout"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/top_app_bar"
            app:title="@string/task_planner" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_navigation_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/container_navigation_buttons_height"
        android:layout_marginTop="@dimen/margin_start_items_in_card_deadline"
        android:layout_marginHorizontal="@dimen/margin_start_title_card"
        android:backgroundTint="@color/light_grey"
        app:cardCornerRadius="@dimen/corner_radius_card_item"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/margin_bottom_title_start"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/completed_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/completed"
                app:backgroundTint="@null"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/active_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:text="@string/active"
                app:backgroundTint="@null"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_width_end_button_low"
        android:src="@drawable/group"
        app:layout_constraintTop_toBottomOf="@id/container_navigation_buttons"
        app:layout_constraintBottom_toTopOf="@id/button_add_new"
        android:layout_marginHorizontal="@dimen/margin_start_card_deadline"
        android:layout_marginVertical="@dimen/margin_bottom_for_card_item"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_width_end_button_low"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/container_navigation_buttons"
        app:layout_constraintBottom_toTopOf="@id/button_add_new"
        android:layout_marginHorizontal="@dimen/margin_start_card_deadline"
        android:layout_marginVertical="@dimen/margin_bottom_for_card_item"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_new"
        style="@style/style_button_add_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_add_new"
        android:layout_margin="@dimen/margin_start_card_deadline"
        android:text="@string/add_task"
        app:backgroundTint="@color/yellow"
        app:cornerRadius="@dimen/corner_radius_card_item"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>